--- a/trudi landing/index.html
+++ b/trudi landing/index.html
@@ -9,12 +9,12 @@
 <body>
     <div class="wrapper d-flex">
         <div class="block">
-            <div class="bubble size-29"></div>
-            <div class="bubble size-36"></div>
-            <div class="bubble size-45"></div>
-            <div class="bubble size-58"></div>
-            <div class="bubble size-80"></div>
-            <div class="bubble size-131"></div>
+            <div class="bubble size-29 box-shadow--blue floating"></div>
+            <div class="bubble size-36 box-shadow--blue floating"></div>
+            <div class="bubble size-45 box-shadow--yellow floating"></div>
+            <div class="bubble size-58 box-shadow--blue floating"></div>
+            <div class="bubble size-80 box-shadow--yellow floating"></div>
+            <div class="bubble size-131 box-shadow--green"></div>
             <div class="bubble size-179"></div>
             <div class="bubble size-690"></div>
             <div class="align-center-absolute phone-wrapper">
@@ -30,6 +30,7 @@
                     </div>
                 </div>
             </div>
+            <div class="align-center-absolute phone-wrapper"></div>
         </div>
         <div class="block d-flex justify-content-center flex-dir-col">
             <div  class="d-flex flex-dir-col gap-16">
